--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,26 +7,54 @@
           <td>To</td>
           <td>From</td>
           <td>Amount</td>
+          <td></td>
         </tr>
       </thead>
       <tbody>
-        {{#each data}}
+        {{#data}}
           <tr>
             <input type='hidden' name='id[]' value='{{id}}'>
-            <td><input class='form-control' type='text' name='to[]' value='{{to}}'></td>
-            <td><input class='form-control' type='text' name='from[]' value='{{from}}'></td>
+            <!--<td><input class='form-control' type='text' name='to[]' value='{{to}}'></td>
+            <td><input class='form-control' type='text' name='from[]' value='{{from}}'></td>-->
+            <td>
+              <select class='select' name='to[]'>
+                {{#each users}}
+                  <option value='{{this}}'>{{this}}</option>
+                {{else}}
+                  <option value='none'>none</option>
+                {{/each}}
+              </select>
+            </td>
+            <td>
+              <select class='select' name='from[]'>
+                {{#each users}}
+                  <option value='{{this}}'>{{this}}</option>
+                {{/each}}
+              </select>
+            </td>
             <td><input class='form-control' type='text' name='amount[]' value='{{amount}}'></td>
+            <td><button type='button' class='btn btn-danger'>X</button></td>
           </tr>
-        {{/each}}
+        {{/data}}
       </tbody>
     </table>
     <input class='btn btn-primary' type='submit' name='Submit'>
+    <span class='pull-right'><button id='addRow' type='button' class='btn btn-primary'>+</button></span>
   </form>
 </div>
 
 <!-- Divider -->
 <div class='col-lg-12 col-md-12 col-sm-12 col-xs-12'><br></div>
 
-<!--
-
--->
+<!-- Add / Delete Row Javascript -->
+<script type='text/javascript'>
+  $(document).ready(function() {
+    //Add row function
+    $('#addRow').on('click', function() {
+      var copy = $('tr:last').html();
+      $('.table').append('<tr></tr>');
+      $('tr:last').html(copy);
+      $('tr:last').find('input').val('');
+    });
+  });
+</script>
