--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -5,6 +5,7 @@
     <title>Test App</title>
     <link rel='stylesheet' href='/css/bootstrap.min.css' />
     <link rel='stylesheet' href='/css/style.css' />
+    <script type='text/javascript' src='/js/jquery.min.js'></script>
   </head>
   <body>
     <div class="container">
